--- a/App/AndRemote/app/src/main/res/values/strings.xml
+++ b/App/AndRemote/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="action_reconnect">Reconnect</string>
+    <string name="action_accel">Accelerometer Mode</string>
     <string name="pref_host">Host</string>
     <string name="pref_host_summary">Host to connect to</string>
     <string name="pref_connection">Connection parameters</string>
